Implemented drawer menus and Navigating through the MENU. Added showProgress. Implemented resizing of profile pictures via Picasso

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.UserListActivity">
+        <activity android:name=".ui.activities.UserListActivity"
+            android:label="DevIntesive Crew"
+            >
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN"/> -->
