--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'org.greenrobot:greendao:3.0.1'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
+    compile 'com.redmadrobot:chronos:1.0.5'
 
 
 }
