--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
-        android:name=".utils.DevintensiveApplication"
+        android:name=".DevintensiveApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -32,7 +32,7 @@
         </activity>
         <activity
             android:name=".ui.activities.UserListActivity"
-            android:label="DevIntesive Crew"
+            android:label="@string/user_list_activity_title"
             >
 
             <!--<intent-filter>-->
